# model-exchange-framework

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  README_PUBLIC.md  SECURITY.md  bunfig.toml  docker-compose.yml  package-lock.json  package.json  stryker.config.json  tsconfig.cli.json  tsconfig.json  tsconfig.paths.json  tsconfig.sdk.json  tsconfig.tsbuildinfo
.claude/: settings.json
.claude/agents/: code-cleanup.md  (+4 more)
.github/: FUNDING.yml  pull_request_template.md
.playwright-mcp/: tools-snapshot-2.md  tools-snapshot.md
dashboard/: Dockerfile  MXF-Dashboard-Style-Guide.md  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE_INDEX.md  ARCHITECTURE_QUICK_REFERENCE.md  CNAME  MXF_ARCHITECTURE_ANALYSIS.md  code-execution-integration.md  deployment.md  getting-started.md  glossary.md  index.html  index.md  llms.txt  meilisearch-integration.md  site.webmanifest  task-prompt-best-practices.md  testing.md  troubleshooting.md  use-cases.md
scripts/: cleanup-db.ts  patch-ansi-styles.js  quick-start.sh
src/desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/desktop/src-tauri/capabilities/: default.json
src/desktop/src-tauri/icons/: icon.icns
src/desktop/src-tauri/src/: lib.rs  main.rs
src/desktop/src-tauri/src/commands/: config.rs  mod.rs  session.rs  shell.rs
tests/: code-execution-demo.ts  jest.config.ts  jest.unit.config.ts  meilisearch-integration.test.ts  tsconfig.json
(+1113 files in other folders)
