[package]
name = "mxf-desktop"
version = "0.1.0"
description = "MXF Desktop — Multi-Agent Collaboration Interface"
authors = ["Brad Anderson <BradA1878@pm.me>"]
edition = "2021"

[lib]
name = "mxf_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tokio = { version = "1", features = ["process", "io-util"] }
